--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -1,29 +1,74 @@
+#menu{
+width: 100%;
+height: 170px;
+}
 
+#logo {
+	float: left;
+	width: 20%;
+	height:100%;
+}
+#navegacion{
+	background-color: #000000;
+	float:left;
+	width: 60%;
+	height:160px;
+}
 #menuNav{
-	border: 1px solid red;
+	background-color: #C8C8C8;
+	margin: 60px 0px 0px 0px;
+	/*border: 1px solid red;*/
+	width: 100%;
+	height:40%;
+}
+#inicioSesion{
+	float: left;
+	background-color: #FE2E2E;
+	
+	width: 20%;
+	height: 160px;
+}
+ul{
+	width: 100%;
+	height: 100%;
+	margin: 0px 0px 0px 0px;
 }
 
 li{
+	margin-top: 10px;
+	float: left;
+	padding: 10px 4% 10px 4%;
 	display: inline;
-	border: 1px solid blue;
+	/*border: 1px solid blue;*/
 }
 
 #logoNav{
-	width: 30px;
-	height: 30px;
+	width: 100%;
+	height: 100%;
 }
 
+
+body{
+	width: 98%;
+	height: 500px;	
+}
+/**
 div{
 	border: 1px solid black;
 	margin-top: 10px;
 }
+*/
 
+/**
 #galeria{
 	width: 100%;
 	height: 400px ;
 }
+*/
 
+/**
 #timeline{
 	width: 100%;
 	height: 400px ;
 }
+*/
