--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -16,7 +16,7 @@ height: 140px;
 }
 #menuNav{
 	background-color: #C8C8C8;
-	margin: 60px 0px 0px 0px;
+	margin: 10% 0% 0% 0%;
 	/*border: 1px solid red;*/
 	width: 100%;
 	height:40%;
@@ -28,9 +28,7 @@ height: 140px;
 	width: 20%;
 	height: 100%;
 }
-a{
-	margin-top: 10px;
-}
+
 ul{
 	width: 100%;
 	height: 100%;
@@ -41,13 +39,13 @@ ul{
 
 li{
 	text-align: center;
-	width: 20%;
-	height: 100%;
+	width: 16%;
+	height: 45%;
 	float: left;
 	/*padding: 10px 4% 10px 4%;*/
 	display: inline;
 	/*border: 1px solid blue;*/
-
+	padding: 2% 2% 2% 2%;
 }
 
 #logoNav{
