--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -47,13 +47,17 @@ height: 9em;
 	margin-top: 1%;
 }
 
-a {
+a,span {
 	position: relative;
 	color: #09f;
 	text-decoration: none;
 	font-family: sans-serif;
 }
-
+h1,h2,h3 {
+	color: #09f;
+	text-decoration: none;
+	font-family: sans-serif;	
+}
 ul{
 	width: 100%;
 	height: 100%;
@@ -83,23 +87,39 @@ body{
 	width: 98%;
 	/*height: 500px;	*/
 }
-/**
-div{
-	border: 1px solid black;
-	margin-top: 10px;
-}
-*/
 
-/**
-#galeria{
-	width: 100%;
-	height: 400px ;
-}
-*/
+#mapa_mesas{
 
-/**
-#timeline{
-	width: 100%;
-	height: 400px ;
+	float: left;
+	border: 0.2em solid blue;
+	width: 75%;
+	height: 25em;
+
 }
-*/
+#form_reservacion{
+	float: left;
+	width:23%;
+	height: 100%;
+	padding-top: 1em;
+
+}
+#form_reserva{
+	/*width: 97%;*/
+	/*padding: 1em;*/
+	margin: 1em 0em 0em 2em;
+}
+
+#reservaciones{
+	margin: 1em 0em 0em 2em;
+	/*border: 0.3em solid black;*/
+	width: 90%;
+	height:100%;
+	padding: 2em 2em 2em 2em;
+}
+.recuadro{
+	float: left;
+	border: 0.5em solid gray;
+	width: 20%;
+	height: 10em;
+	margin: 1em;
+}
