--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -118,7 +118,12 @@ body{
 }
 .recuadro{
 	float: left;
-	border: 0.5em solid gray;
+	
+	border-radius: 1px 60px 1px;
+	
+	/*border-radius:80px/70px;*/
+	/*border: 3px solid #BADA55;*/
+	background: #BADA55;
 	width: 20%;
 	height: 10em;
 	margin: 1em;
