--- a/src/css/miCss.css
+++ b/src/css/miCss.css
@@ -1,29 +1,7 @@
-
-.navegacion{
-   
-    margin:3% 10% 3% 0%;
-    border: 1px solid black;
-	padding: 1% 60% 3% 1%; 
-	position: absolute;
-	left: 30%;
-
-}
-
-.barra{
-	position: absolute;
-	border: 1px solid black;
-	padding: 15px 20px 18px 20px;
-	margin: 0% 1% 1% 0%;
-	top: 1%;
-	left: 33%;
-	
-}
-
-
 .info{
-	margin: 50;
+	margin: 4%;
 	position:absolute;
-	top:150;
+	top:45%;
 }
 
 
@@ -31,17 +9,17 @@
 	margin:20;
 	border:1px solid;
 	border-color: rgb(192, 187, 187);
-	padding: 2 650 150 10; 
+	padding: 1% 500% 90% 1%; 
 }
 
 .cuadro-derecho{
-	margin:30;
+	margin:20%;
 	border:1px solid;
 	border-color: rgb(192, 187, 187);
-	padding: 2 300 384 10; 
+	padding: 2% 200% 255% 10%; 
 	position: absolute;
-	left: 830;
-	top:32;
+	left: 550%;
+	top:6%;
 }
 
 .texto{
