--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -2,6 +2,9 @@ html,body{
 	height: 100%;
 }
 
+header {
+	width: 101.5%;
+}
 #menu{
 	width: 100%;
 	height: 9em;
@@ -47,12 +50,20 @@ html,body{
 	margin-top: 1%;
 }
 
-a,span {
+span {
 	position: relative;
 	color: #09f;
 	text-decoration: none;
 	font-family: sans-serif;
 }
+
+.boton_menu {
+	text-decoration: none;
+	height: 100%;
+	width: 100%;
+	display: inline-block;
+}
+
 h1,h2,h3 {
 	color: #09f;
 	text-decoration: none;
