--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -17,7 +17,7 @@ header {
 	border-right: 0.3em solid white;
 }
 #navegacion{
-	
+
 	float:left;
 	width: 80%;
 	height:100%;
@@ -40,7 +40,7 @@ header {
 #inicioSesion{
 	float: left;
 	background-color: #FE2E2E;
-	
+
 	width: 20%;
 	height: 100%;
 }
@@ -67,7 +67,7 @@ span {
 h1,h2,h3 {
 	color: #09f;
 	text-decoration: none;
-	font-family: sans-serif;	
+	font-family: sans-serif;
 }
 ul{
 	width: 100%;
@@ -77,7 +77,7 @@ ul{
 	/*margin: 0px 0px 0px 0px;*/
 }
 
-li{
+nav ul li{
 	line-height: 3.8em;
 	text-align: center;
 	width: 20%;
@@ -88,6 +88,9 @@ li{
 	/*border: 1px solid blue;*/
 	/*padding: 2% 2% 2% 2%;*/
 }
+
+
+
 
 li:hover {
 	background-color: #FFFF00;
@@ -137,13 +140,21 @@ body{
 }
 .recuadro{
 	float: left;
-	
+
 	border-radius: 1px 60px 1px;
-	
+
 	/*border-radius:80px/70px;*/
 	/*border: 3px solid #BADA55;*/
 	background: #BADA55;
 	width: 20%;
 	height: 10em;
 	margin: 1em;
+}
+
+#timeline{
+	border: 2px solid blue;
+	float: right;
+	width: 100%;
+	height:60%;
+
 }
