--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -146,11 +146,13 @@ body{
 	/*border-radius:80px/70px;*/
 	/*border: 3px solid #BADA55;*/
 	background: #BADA55;
-	width: 20%;
-	height: 10em;
+	width: 30%;
+	height: 12em;
 	margin: 1em;
 }
-
+.contenido_recuadro{
+	
+}
 #timeline{
 	border: 2px solid blue;
 	float: right;
