--- a/src/css/miCss.css
+++ b/src/css/miCss.css
@@ -1,25 +1,24 @@
 .info{
-	margin: 4%;
-	position:absolute;
-	top:30%;
+	width: 100%;
+	height: 100%;
 }
 
 
 .cuadro{
-	margin:20;
+	padding: 2em;
+	float: left;
+	width: 48%;
+	height: auto;
 	border:1px solid;
 	border-color: rgb(192, 187, 187);
-	padding: 1% 500% 90% 1%; 
 }
 
 .cuadro-derecho{
-	margin:20%;
+	height: auto;
+	margin: 3em 3em 3em 3em;
+	float: left;
 	border:1px solid;
 	border-color: rgb(192, 187, 187);
-	padding: 2% 200% 255% 10%; 
-	position: absolute;
-	left: 550%;
-	top:6%;
 }
 
 .texto{
@@ -34,4 +33,17 @@
 	position: absolute;
 	left: 120%;
 	top:0%;
+}
+@media only screen and (max-width: 768px) {
+
+.cuadro{
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+.cuadro_derecho{
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
 }
