--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -52,17 +52,17 @@ header {
 }
 
 #timeline{
-  margin-top: 1%;
-  border: 2px solid blue;
+  margin-top: -4%;
+ /* border: 2px solid blue;*/
   float: left;
   width: 30%;
-  height:400px;
+  height:auto;
 
 }
 @media only screen and (max-width: 768px) {
   #logo{
     width: 100%;
-    
+
   }
   #cssmenu{
     height: -1%;
@@ -77,10 +77,11 @@ header {
     height: 50%;
   }
   #timeline{
+    margin-top: 30%;
     width: 95%;
     height: 50%;
   }
-  
+
 }
 
 
