--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -1,5 +1,6 @@
-html,body{
-	/*height: 50em;*/
+html{
+	background-image: url(../images/fondo.jpg);
+  background-size: contain;
 }
 
 header {
@@ -8,6 +9,7 @@ header {
 #menu{
 	width: 100%;
 	height: 9em;
+  margin-bottom: 5px;
 }
 
 #logo {
@@ -24,7 +26,7 @@ header {
 }
 
 #espacio_sup{
-	background-color: #FE2E2E;
+	background-color: #d9222e;
 	width: 100%;
 	height: 55%;
 	float: left;
@@ -117,8 +119,10 @@ li:hover a {
 
 
 body{
-	width: 98%;
-	/*height: 500px;	*/
+	width: 90%;
+  margin-right: 5%;
+  margin-left: 5%;  
+  background-color: white;
 }
 
 #mapa_mesas{
@@ -234,7 +238,8 @@ body{
   line-height: 1;
 }
 #cssmenu > ul {
-  background: #3db2e1;
+  /**/
+  background: #ec8b2e;
 }
 #cssmenu > ul > li {
   float: left;
@@ -260,7 +265,8 @@ body{
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
-  background: #3db2e1;
+  /**/
+  background: #ec8b2e;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   -o-transition: all .3s;
@@ -273,11 +279,13 @@ body{
   transform-style: preserve-3d;
 }
 #cssmenu > ul > li.active > a {
-  color: #dff2fa;
+  //*FOndoROjo*/
+  color: #d8232b;
 }
 #cssmenu > ul > li:hover > a,
 #cssmenu > ul > li > a:hover {
-  color: #dff2fa;
+  /*FOndoROjo*/
+  color: #d8232b;
   -webkit-transform: rotateX(90deg) translateY(-23px);
   -moz-transform: rotateX(90deg) translateY(-23px);
   transform: rotateX(90deg) translateY(-23px);
@@ -294,8 +302,10 @@ body{
   width: 100%;
   height: 100%;
   padding: 16px 20px;
-  color: #dff2fa;
-  background: #19799f;
+  /*FOndoROjo*/
+  color: #d8232b;
+  /*FOndo al girar*/
+  background: #f18e30;
   content: attr(data-title);
   -webkit-transition: background 0.3s;
   -moz-transition: background 0.3s;
@@ -310,7 +320,8 @@ body{
 }
 #cssmenu > ul > li:hover > a::before,
 #cssmenu > ul > li > a:hover::before {
-  background: #3db2e1;
+  /**/
+  background: #ec8b2e;
 }
 #cssmenu.small-screen {
   width: 100%;
@@ -329,7 +340,8 @@ body{
 }
 #cssmenu.small-screen > ul > li:hover > a,
 #cssmenu.small-screen > ul > li > a:hover {
-  color: #dff2fa;
+  /*FOndoROjo*/
+  color: #d8232b;
   -webkit-transform: none;
   -moz-transform: none;
   transform: none;
@@ -347,7 +359,8 @@ body{
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: #3db2e1;
+  /**/
+  background: #ec8b2e;
 }
 #cssmenu.small-screen #menu-button:after {
   content: "";
@@ -364,8 +377,10 @@ body{
   height: 3px;
 }
 #cssmenu.small-screen #menu-button.menu-opened:after {
-  border-top: 2px solid #dff2fa;
-  border-bottom: 2px solid #dff2fa;
+  /*FOndoROjo*/
+  border-top: 2px solid #d8232b;
+  /*FOndoROjo*/
+  border-bottom: 2px solid #d8232b;
 }
 #cssmenu.small-screen #menu-button:before {
   content: "";
@@ -378,7 +393,8 @@ body{
   background: #ffffff;
 }
 #cssmenu.small-screen #menu-button.menu-opened:before {
-  background: #dff2fa;
+  /*FOndoROjo*/
+  background: #d8232b;
 }
 
 
@@ -418,5 +434,18 @@ margin-top: 20%;
   float: left;
 
 }
+
+}
+
+.inicioAdmin{
+  width: 50px;
+  height: 100%;
+  float: right;
+  background-color: #d9222e;
+  color: #d9222e;
+}
+
+.inicioAdmin:hover {
+  background-color: black;
 
 }
