--- a/src/css/estilo_menu.css
+++ b/src/css/estilo_menu.css
@@ -1,12 +1,15 @@
 #principal{
-	background-color: black;
 	width: 100%;
 	height: 100%;
 	margin-top: 0px;
+	background-color: white;
+	height: 100%;
 }
 
 .contenido{	
 	margin-top: none;
+	background-color: white;
+	height: 100%;
 }
 
 #menu_almientos{
@@ -18,12 +21,14 @@
 #galeria_menu{
 	width: 62%;
 	float: left;
-	margin-left: 5px;
+	margin-left: 20px;
 }
 
 #descripcion_menu{
 	width: 20%;
 	float: right;
+	font-size: 20px;
+	padding-left: 5px;
 }
 
 .lin{
@@ -40,5 +45,3 @@
 	background-color: #d9222e;
 	/*padding: 2% 2% 0.85em 2%;*/
 }
-
-
