--- a/src/css/estilo_menu.css
+++ b/src/css/estilo_menu.css
@@ -1,6 +1,5 @@
 #principal{
 	width: 100%;
-	height: 100%;
 	margin-top: 0px;
 	background-color: white;
 	height: 100%;
@@ -10,18 +9,18 @@
 	margin-top: none;
 	background-color: white;
 	height: 100%;
+
 }
 
 #menu_almientos{
 	width: 15%;
 	float: left;
-
 }
 
 #galeria_menu{
 	width: 62%;
 	float: left;
-	margin-left: 20px;
+	margin-left: 18px;
 }
 
 #descripcion_menu{
@@ -44,4 +43,8 @@
 .lin:hover {
 	background-color: #d9222e;
 	/*padding: 2% 2% 0.85em 2%;*/
+}
+
+#cambio{
+	
 }
