--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -1,3 +1,4 @@
+
 html{
 	background-image: url(../images/fondo.jpg);
   background-size: contain;
@@ -32,16 +33,7 @@ header {
 	height: 55%;
 	float: left;
 	border-bottom: 0.3em solid white;
-}
-/**
-#inicioSesion{
-	float: left;
-	background-color: #FE2E2E;
-
-	width: 20%;
-	height: 100%;
-}
-*/
+}*/
 
 #contenido{
   float: left;
@@ -56,7 +48,6 @@ header {
 
 #timeline{
   margin-top: -4%;
- /* border: 2px solid blue;*/
   float: left;
   width: 30%;
   height:auto;
@@ -204,7 +195,7 @@ body{
 
 
 
-
+/*desdearribaya*/
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 #cssmenu,
 #cssmenu ul,
@@ -400,7 +391,7 @@ body{
   /*FOndoROjo*/
   background: #d8232b;
 }
-
+/*desdearribaya*/
 
 
 @media only screen and (max-width: 768px) {
