--- a/src/css/estilo_home.css
+++ b/src/css/estilo_home.css
@@ -1,3 +1,4 @@
+/*Promo*/
 @-webkit-keyframes girando {
 			from,20% 	{ -webkit-transform: rotateY(0deg);   }
 			30%,40%  	{ -webkit-transform: rotateY(90deg);  }
@@ -86,5 +87,25 @@
 						-moz-transform: rotateY(-270deg) translateZ(90px);
 						transform: rotateY(-270deg) translateZ(90px);
 					}
+/*Fin Promo*/
 
+/*Div's*/
+#contenido{
+  float: left;
+	margin-top: 1%;
+  width: 68%;
+  height: 100%;
+}
+#galeria_imagenes{
+  width: 100%;
+  height: 100%;
+}
 
+#timeline{
+  margin-top: -4%;
+ /* border: 2px solid blue;*/
+  float: left;
+  width: 30%;
+  height:auto;
+
+}
