--- a/src/css/estilo_agenda_reservacion.css
+++ b/src/css/estilo_agenda_reservacion.css
@@ -3,9 +3,11 @@
 
 *:focus { outline: none; }
 /* === Form Typography === */
+/*
 body {
 	font: 14px/21px "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 }
+*/
 
 
 #form_reservacion div{
