--- a/src/css/estilo_agenda_reservacion.css
+++ b/src/css/estilo_agenda_reservacion.css
@@ -1,3 +1,39 @@
+#mapa_mesas{
+
+	float: left;
+	border: 0.2em solid blue;
+	width: 75%;
+	height: 35em;
+  background-size:cover;
+  background-image: url('../images/fondoRestaurante.jpg');
+
+}
+
+#form_reservacion{
+	float: left;
+	width:23%;
+	height: 100%;
+	padding-top: 1em;
+
+}
+#form_reserva{
+	/*width: 97%;*/
+	/*padding: 1em;*/
+	margin: 1em 0em 0em 2em;
+}
+
+#reservaciones{
+	margin: 1em 0em 0em 2em;
+	/*border: 0.3em solid black;*/
+	width: 90%;
+	height:100%;
+	padding: 2em 2em 2em 2em;
+}
+
+
+
+
+
 /*Formulario*/
 
 
