--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -1,9 +1,50 @@
 html{
 	background-image: url(../images/fondo.jpg);
   background-size: contain;
-  background-repeat: repeat-x;
+  background-repeat: repeat;
+  font-family: Raleway, sans-serif;
+}
+body{
+	width: 90%;
+	margin-right: 5%;
+	margin-left: 5%;  
+	background-color: white;
+	background-repeat: repeat-y;
 }
 
 header {
 	width: 101.5%;
+}
+
+span {
+	position: relative;
+	color: #09f;
+	text-decoration: none;
+	font-family: sans-serif;
+}
+
+
+h1,h2,h3 {
+	color: black;
+	text-decoration: none;
+	font-family: sans-serif;
+}
+ul{
+	width: 100%;
+	height: 100%;
+	padding-left: 0%;
+	margin: 0%;
+	/*margin: 0px 0px 0px 0px;*/
+}
+
+nav ul li{
+	line-height: 3.8em;
+	text-align: center;
+	width: 20%;
+	height: 100%;
+	float: left;
+	/*padding: 10px 4% 10px 4%;*/
+	display: inline;
+	/*border: 1px solid blue;*/
+	/*padding: 2% 2% 2% 2%;*/
 }
