--- a/src/css/estilo_nav.css
+++ b/src/css/estilo_nav.css
@@ -1,7 +1,7 @@
 /*Menu Nav*/
 #menu{
   width: 100%;
-  height: 9em;
+  height: 7em;
   margin-bottom: 5px;
 }
 
@@ -41,6 +41,11 @@
 .btnAdmin:hover {
   background-color: #ec8b2e;
 
+}
+
+#logoNav{
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -88,7 +93,7 @@
 }
 #cssmenu > ul {
   /**/
-  background: #ec8b2e;
+  background: none; 
 }
 #cssmenu > ul > li {
   float: left;
