--- a/src/css/estilo_contacto.css
+++ b/src/css/estilo_contacto.css
@@ -1,10 +1,10 @@
 .contenedor{
-width: 80%;	
+width: 100%;	
 margin: 0 auto;
 }
 .texto{
-	padding: 5%;
-	width: 30%;
+	padding-top: 5%;
+	width: 40%;
 	display: inline-block;
 	vertical-align: top;
 	
@@ -13,7 +13,7 @@ margin: 0 auto;
 #mapa{
 	padding-top: 5%;
 	width:50%;
-	height:60%;
+	height:29em;
 	display: inline-block;
 	
 }
@@ -21,6 +21,10 @@ margin: 0 auto;
 	width: 100%;
 	height: 100%;
 	
+}
+
+p,h1{
+	text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
