--- a/src/css/estilo1.css
+++ b/src/css/estilo1.css
@@ -144,14 +144,13 @@ body{
 	padding: 2em 2em 2em 2em;
 }*/
 
-/*v parte del Admin*/
+/*v parte del Admin
 .recuadro{
 	float: left;
 
 	border-radius: 1px 60px 1px;
 
-	/*border-radius:80px/70px;*/
-	/*border: 3px solid #BADA55;*/
+
   border: 3px solid #E79703;
   background: #EC8B2E;
 	width: 30%;
@@ -162,7 +161,7 @@ body{
 
 #reservaciones1{
   margin: 1em 0em 0em 2em;
-  /*border: 0.3em solid black;*/
+
   width: 60%;
   height:100%;
   padding: 2em 2em 2em 2em;
@@ -180,7 +179,6 @@ body{
 
 
 .contenido_recuadro{
-/*Estilo letra*/
 }
 
 #menuNav{
@@ -190,7 +188,7 @@ body{
   height: 42%;
 
 }
-
+*/
 /*^parteAdmin*/
 
 /*desdearribaya
@@ -391,7 +389,7 @@ body{
 }
 /*desdearribaya*/
 
-
+/*
 @media only screen and (max-width: 768px) {
   #mapa_mesas{
     display: none;
