--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -49,3 +49,82 @@ nav ul li{
 	/*border: 1px solid blue;*/
 	/*padding: 2% 2% 2% 2%;*/
 }
+
+
+/*Responsivo*/
+@media only screen and (max-width: 768px) {
+  #mapa_mesas{
+    display: none;
+  }
+  #logo{
+    width: 100%;
+
+  }
+  #cssmenu{
+    height: -1%;
+  }
+
+  #navegacion{
+    width: 100%;
+  }
+  #contenido{
+    display: none;
+    width: 100%;
+    height: 50%;
+  }
+  #timeline{
+    margin-top: 30%;
+    width: 95%;
+    height: 50%;
+  }
+   .recuadro{
+    width: 50%;
+   }
+
+     .recuadro1{
+    width: 50%;
+   }
+
+#form_reservacion_promo {
+margin-top: 20%;
+  float: left;
+
+}
+.contenido{
+	display: block;
+}
+}
+
+/*NO SE DE DONDE SEA ESTO*/
+
+
+#reservaciones1{
+  margin: 1em 0em 0em 2em;
+  /*border: 0.3em solid black;*/
+  width: 60%;
+  height:100%;
+  padding: 2em 2em 2em 2em;
+}
+.recuadro1{
+  float: left;
+  border-radius: 1px 60px 1px;
+  background: #EC8B2E;
+  width: 40%;
+  height: 12em;
+  margin: 1em;
+}
+
+
+
+
+.contenido_recuadro{
+/*Estilo letra*/
+}
+
+#menuNav{
+  float: left;
+  background-color: #C8C8C8;
+  width: 100%;
+  height: 42%;
+
+}
