--- a/src/css/estilo_agenda_reservacion.css
+++ b/src/css/estilo_agenda_reservacion.css
@@ -1,7 +1,7 @@
 #mapa_mesas{
 
 	float: left;
-	border: 0.2em solid blue;
+	/*border: 0.2em solid blue;*/
 	width: 75%;
 	height: 29em;
   background-size: 100% 100%;
