--- a/src/css/estilo_agenda_reservacion.css
+++ b/src/css/estilo_agenda_reservacion.css
@@ -161,6 +161,17 @@ body {
 	border-color: #b03535;
 }
 
+.invalido{
+    background: #fff url(../images/invalid.png) no-repeat 98% center;
+	box-shadow: 0 0 5px #d45252;
+	border-color: #b03535;	
+}
+.valido{
+	background: #fff url(../images/valid.png) no-repeat 98% center;
+	box-shadow: 0 0 5px #5cd053;
+	border-color: #28921f;
+}
+
 /* === Form hints === */
 .form_hint {
 	background: #d45252; border-radius: 3px 3px 3px 3px; color: white; margin-left: 8px; padding: 1px 6px; z-index: 999; /* hints stay above all other elements */ position: absolute; /* allows proper formatting if hint is two lines */ display: none;
