Ya muestra promociones d ela BD

--- a/src/css/estilo_muestra_promocion.css
+++ b/src/css/estilo_muestra_promocion.css
@@ -8,7 +8,7 @@
 .recuadro1 {
 
  /* border-radius: 1px 60px 1px;*/
-  background: #EC8B2E;
+    background: #FDE5CE;
 
   width: 30%;
   height: 12em;
