--- a/src/css/estilo_home.css
+++ b/src/css/estilo_home.css
@@ -52,7 +52,8 @@
   						width: 100%;
   						height: 695%;
   						border: 2px solid #fff;
-  					background: rgba(231, 149, 0, 1);
+  						/*color del cubo*/
+  					background: #ab7842;
   						font-weight: bold;
   					font-size: 14px;
   					text-align: center;
