--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -2,7 +2,13 @@ html{
 	background-image: url(../images/fondo.jpg);
   background-size: contain;
   background-repeat: repeat;
-  font-family: Raleway, sans-serif;
+  font-family: 'Roboto';
+  src: url('Roboto-ThinItalic-webfont.eot');
+  src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
+       url('Roboto-ThinItalic-webfont.woff') format('woff'),
+       url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
+       url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg'); 
+  font-weight: 200;
 }
 body{
 	width: 90%;
@@ -19,9 +25,10 @@ header {
 
 span {
 	position: relative;
-	color: #09f;
+  /*color texto en reservacione*/
+	color: black;
 	text-decoration: none;
-	font-family: sans-serif;
+	/*font-family: sans-serif;*/
 }
 
 
@@ -128,3 +135,4 @@ margin-top: 20%;
   height: 42%;
 
 }
+
