--- a/src/css/estilo_menu.css
+++ b/src/css/estilo_menu.css
@@ -26,7 +26,7 @@
 #descripcion_menu{
 	width: 20%;
 	float: right;
-	font-size: 20px;
+	font-size: 15px;
 	padding-left: 5px;
 }
 
@@ -37,6 +37,7 @@
 	text-align: center;
 	background-color: #ec8b2e;
 	color: white;
+	cursor: pointer;
 
 }
 
