--- a/src/css/estilo_nav.css
+++ b/src/css/estilo_nav.css
@@ -264,6 +264,7 @@ footer {
     padding:5px 0px;
     clear: both;
     background: #d9222e;
+    display: block;
 }
 
 #foot{
@@ -277,4 +278,41 @@ footer {
 
 #footText{
   margin-right: 2em;
+}
+#navText{
+  margin-right: 2em;
+  display: inline-block;
+  float: right;
+  color: white;
+  height: bold
+}
+
+@media only screen and (max-width: 768px){
+footer {
+    position: relative;
+    /* Altura total del footer en px con valor negativo */
+    margin-top: -50px;
+    /* Altura del footer en px. Se han restado los 5px del margen
+    superior mas los 5px del margen inferior
+    */
+    height: 50px;
+    padding:5px 0px;
+    clear: both;
+    background: #d9222e;
+    display: block;
+}
+
+#foot{
+  width: 100%;
+  height: 100% ;
+  background-color: #d9222e;
+  color: white;
+  float: right;
+  text-align: right;
+}
+
+#footText{
+  margin-right: 2em;
+}
+  
 }
