--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -15,7 +15,7 @@ body{
 	height: 100%;
 	margin-right: 5%;
 	margin-left: 5%;
-	background-color: rgb(244, 240, 230);
+	background-color: white;
 	background-repeat: repeat-y;
 }
 
@@ -110,7 +110,3 @@ margin-top: 20%;
   height: 42%;
 
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> 278efea0d0820a2f28ed8ca975b698caaad894c2
