--- a/src/css/formularioPromo.css
+++ b/src/css/formularioPromo.css
@@ -218,7 +218,7 @@ text-decoration: none;
   padding: 5px 10px 5px 10px;
 }
 
-button {
+#formulario  {
  margin-left: 3%;
   padding: 0px 0px 0px 0px;
 }
