--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -7,7 +7,7 @@ html{
   src: url('Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
        url('Roboto-ThinItalic-webfont.woff') format('woff'),
        url('Roboto-ThinItalic-webfont.ttf') format('truetype'),
-       url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg'); 
+       url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
   font-weight: 200;
 }
 body{
@@ -15,7 +15,7 @@ body{
 	height: 100%;
 	margin-right: 5%;
 	margin-left: 5%;
-	background-color: white;
+	background-color: orange;
 	background-repeat: repeat-y;
 }
 
@@ -100,6 +100,23 @@ margin-top: 20%;
 .contenido{
 	display: block;
 }
+
+
+
+
+        #girando span {
+            margin-top: -194px;
+            position: absolute;
+                width: 85%;
+              height: 400%;
+              border: 2px solid #fff;
+              /*color del cubo*/
+            background: #ab7842;
+              font-weight: bold;
+            font-size: 14px;
+            text-align: center;
+            text-shadow: #fff 2px 2px 1px;
+          }
 }
 
 
@@ -110,3 +127,5 @@ margin-top: 20%;
   height: 42%;
 
 }
+
+
