--- a/src/css/estilo_menu.css
+++ b/src/css/estilo_menu.css
@@ -1,13 +1,13 @@
 #principal{
 	width: 100%;
 	margin-top: 0px;
-	background-color: white;
+	background-color: none;
 	height: 100%;
 }
 
 .contenido{	
 	margin-top: none;
-	background-color: white;
+	background-color: none;
 	/*height: 100%;*/
 
 }
