--- a/src/css/estilo_html.css
+++ b/src/css/estilo_html.css
@@ -15,7 +15,7 @@ body{
 	height: 100%;
 	margin-right: 5%;
 	margin-left: 5%;
-	background-color: orange;
+	background-color: rgb(250, 172, 30);
 	background-repeat: repeat-y;
 }
 
